--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       background-color:#a1a1a1;
       text-align:center;
       
-      ">文本</p>
+      ">大梁公，中彩票</p>
       <p>文本</p>
       <p>文本</p>
       <p>文本</p>
