--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>吃蕉蕉</title>
+    <title>Vincent</title>
     <style>  
       body {
         margin: 0;
@@ -15,11 +15,18 @@
     background-color:#f1f1f1;
     text-align:center;
     padding:40px;
+    line-height: 0;
     ">
       <img alt="vincent" src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fsafe-img.xhscdn.com%2Fbw1%2F9143cbdd-070f-4601-b99c-288b640cd6e2%3FimageView2%2F2%2Fw%2F1080%2Fformat%2Fjpg&refer=http%3A%2F%2Fsafe-img.xhscdn.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1683179941&t=eaa7265627604a5fe03ee47e3e855c41" width="80px" height="80px">
+      <p style="
+        padding:0px;
+      ">
+        Vincent
+      </p>
     </div>
     <div style="
     max-width:760px;
+    /* 30px是左右外边距，auto是左右自动，这样是左右居中效果 */
     margin:30px auto;
     padding:15px;
     line-height:1.7;
@@ -28,7 +35,7 @@
       background-color:#a1a1a1;
       text-align:center;
       
-      ">大梁公，中彩票</p>
+      ">文本</p>
       <p>文本</p>
       <p>文本</p>
       <p>文本</p>
